# MoStegoLLM

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml  scratch_bench.py  scratch_qwen_diag.py  scratch_qwen_fix_check.py  scratch_repro.py  scratch_scan_bench.py
.claude/: settings.local.json
LICENSES/: Apache-2.0.txt
compat/: __init__.py  cells.py  generate_golden.py  golden_vectors.jsonl  modal_app.py  payloads.py  qwen_exact.py  qwen_fuzz.py  report.py
compat/results/: smoke-matrix.md
docs/: arithmetic-encoding-explained.md
docs/superpowers/: HANDOFF-2026-06-02-reproducible-coding.md  cloud-matrix-findings-2026-06-05.md
docs/superpowers/plans/: 2026-04-09-usability-enhancements.md  2026-06-02-cross-platform-reproducible-coding.md  2026-06-03-cross-compatibility-foundation.md  2026-06-05-cloud-matrix-plan2.md  2026-06-10-cover-story-prompt-modes.md
examples/: MoStegoLLM_notebook.ipynb  basic_usage.py  cli_walkthrough.sh
src/mostegollm/: __init__.py  cli.py  codec.py  coding.py  compat.py  crypto.py  decoder.py  encoder.py  model.py  seeds.py  utils.py
tests/: conftest.py  test_bpe_filter.py  test_capacity.py  test_chunked.py  test_cli.py  test_codec.py  test_coding.py  test_compat.py  test_cross_platform.py  test_crypto.py  test_dtype_guard.py  test_edge_cases.py  test_filter_equiv.py  test_fuzz.py  test_golden_vectors.py  test_prompt_modes.py  test_qwen.py  test_report.py  test_roundtrip.py  test_special_token_filter.py  test_timing.py  test_top_k_guard.py  test_topics.py
(+4 files in other folders)
